--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,22 @@
 
 [build]
+[build]
+  publish = "public"
+  functions = "netlify/functions"
+
+[functions]
+  node_bundler = "esbuild"
+
+[[redirects]]
+  from = "/availability"
+  to = "/.netlify/functions/availability"
+  status = 200
+
+[[redirects]]
+  from = "/blackout_periods"
+  to = "/.netlify/functions/blackout_periods"
+  status = 200
+
   publish = "public"
   functions = "netlify/functions"
 
